--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,61 @@ body {
 	font-weight: 400;
 }
 
+.multiplayer {
+	visibility: hidden;
+	align-items: center;
+	background: #111;
+	box-shadow: 0 0 0 4px #fff;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	left: 18%;
+	padding: 2rem 4rem;
+	top: 30%;
+	z-index: 1;
+}
+
+.multiplayer-title {
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
+	font-size: 5em;
+	line-height: 1;
+	letter-spacing: -.025em;
+	margin-bottom: 3rem;
+	position: static;
+}
+
+.multiplayer-sides {
+	display: flex;
+	position: static;
+}
+
+.sides {
+	border: 4px solid #fff;
+	margin-bottom: 1.5rem;
+	padding: 1.25rem 2.5rem;
+	white-space: nowrap;
+	margin: 0 2rem;
+	position: static;
+	text-align: center;
+}
+#multiplayer-green, #multiplayer-blue {
+	font-family: 'Lato', sans-serif;
+	font-weight: 900;
+	font-size: 5em;
+	line-height: 1;
+}
+
+#multiplayer-green {
+	color: #33FF55;
+	position: static;
+}
+
+#multiplayer-blue {
+	color: #33BBFF;
+	position: static;
+}
+
 .results {
 	visibility: hidden;
 	align-items: center;
